--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
 /* GLOBAL STYLES */
+html, body {
+  margin: 0;
+  padding: 0;
+}
 h1 {
   font-size: 7vw;
   margin-top: 0;
@@ -16,37 +20,59 @@ a {
 /* SOCIAL STYLES */
 .social-link {
   background: rgba(150, 150, 150, 0.5);
-  color: blue;
+  border-radius: 99px;
+  box-sizing: border-box;
+  color: #fff;
   display: inline-block;
-  height: 36px;
+  font-family: helvetica, arial, sans;
+  font-size: 1rem;
+  font-weight: bold;
+  height: 2.5em;
+  line-height: 1;
+  padding-top: 0.85em;
+  text-align: center;
+  text-decoration: none;
+  vertical-align: middle;
+  width: 2.5em;
+}
+.social-list {
+  list-style: none;
+  padding: 0;
+  text-align: center;
+}
+.social-list > li {
+  display: inline-block;
+  margin: 0 0.5em;
 }
 
 /* BIO STYLES */
 .bio-wrapper {
   font-size: 24px;
-}
-
-.bio-wrapper:after {
-  visibility: hidden;
-  display: block;
-  font-size: 0;
-  content: " ";
-  clear: both;
-  height: 0;
+  margin: auto;
+  max-width: 960px;
+  overflow: hidden;
 }
 .bio-box {
   border: 1px solid black;
   box-sizing: border-box;
   float: left;
   font-size: 1rem;
-  padding: 2%;
-  width: 25%;
+  margin: 40px 1% 0;
+  padding: 0 2% 2%;
+  width: 23%;
 }
 .bio-box h3 {
+  color: #fff;
   font-size: 1.5em;
+  margin: -40px 0 1em;
+  text-align: center;
+}
+.bio-box img {
+  width: 100%;
 }
 .bio-copy {
   font-size: 1em;
+  line-height: 1.5;
 }
 .bio-copy a {
   color: green;
