--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,4 +16,10 @@
   <link rel="stylesheet"
         href="/fonts/fontawesome-free-5.2.0-web/css/all.css">
   <link rel="stylesheet" href="/css/main.css">
+  <script src="/js/gallery.js"></script>
+  <script>
+    document.addEventListener("DOMContentLoaded", function() {
+      activateGallery();
+    });
+  </script>
 </head>
